--- a/auto-bazaar-ejb/pom.xml
+++ b/auto-bazaar-ejb/pom.xml
@@ -52,6 +52,11 @@
          <scope>provided</scope>
       </dependency>
 
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<scope>provided</scope>
+	</dependency>
 
       <!-- Test scope dependencies -->
       <dependency>
