--- a/auto-bazaar-ejb/pom.xml
+++ b/auto-bazaar-ejb/pom.xml
@@ -16,64 +16,58 @@
 
    <dependencies>
 
-      <!-- Declare the APIs we depend on and need for compilation. All of 
-         them are provided by JBoss AS 7 -->
+       <dependency>
+           <groupId>javax.enterprise</groupId>
+           <artifactId>cdi-api</artifactId>
+           <scope>provided</scope>
+       </dependency>
 
-      <!-- Import the EJB API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.jboss.spec.javax.ejb</groupId>
-         <artifactId>jboss-ejb-api_3.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.jboss.spec.javax.annotation</groupId>
+           <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+           <scope>provided</scope>
+       </dependency>
 
-      <!-- Import the CDI API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.jboss.spec.javax.ejb</groupId>
+           <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+           <scope>provided</scope>
+       </dependency>
 
-      <!-- Import the JPA API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.hibernate.javax.persistence</groupId>
+           <artifactId>hibernate-jpa-2.1-api</artifactId>
+           <scope>provided</scope>
+       </dependency>
 
-      <!-- JSR-303 (Bean Validation) Implementation -->
-      <!-- Provides portable constraints such as @Email -->
-      <!-- Hibernate Validator is shipped in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-validator</artifactId>
-         <scope>provided</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate-validator</artifactId>
+           <scope>provided</scope>
+           <exclusions>
+               <exclusion>
+                   <groupId>org.slf4j</groupId>
+                   <artifactId>slf4j-api</artifactId>
+               </exclusion>
+           </exclusions>
+       </dependency>
 
-	<dependency>
-		<groupId>joda-time</groupId>
-		<artifactId>joda-time</artifactId>
-		<scope>provided</scope>
-	</dependency>
-
-      <!-- Test scope dependencies -->
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
       </dependency>
 
-      <!-- Optional, but highly recommended -->
-      <!-- Arquillian allows you to test enterprise code such as EJBs and 
-         Transactional(JTA) JPA from JUnit/TestNG -->
-      <dependency>
-         <groupId>org.jboss.arquillian.junit</groupId>
-         <artifactId>arquillian-junit-container</artifactId>
-         <version>1.0.0.CR4</version>
-         <scope>test</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.jboss.arquillian.junit</groupId>
+           <artifactId>arquillian-junit-container</artifactId>
+           <scope>test</scope>
+       </dependency>
 
+       <dependency>
+           <groupId>org.jboss.arquillian.protocol</groupId>
+           <artifactId>arquillian-protocol-servlet</artifactId>
+           <scope>test</scope>
+       </dependency>
    </dependencies>
 
    <build>
@@ -155,12 +149,12 @@
          <!-- Run with: mvn clean test -Parq-jbossas-managed -->
          <id>arq-jbossas-managed</id>
          <dependencies>
-            <dependency>
-               <groupId>org.jboss.as</groupId>
-               <artifactId>jboss-as-arquillian-container-managed</artifactId>
-               <version>7.0.2.Final</version>
-               <scope>test</scope>
-            </dependency>
+             <dependency>
+                 <groupId>org.wildfly</groupId>
+                 <artifactId>wildfly-arquillian-container-managed</artifactId>
+                 <version>${version.arquillian.container}</version>
+                 <scope>test</scope>
+             </dependency>
          </dependencies>
       </profile>
 
@@ -205,12 +199,12 @@
          <!-- Run with: mvn clean test -Parq-jbossas-remote -->
          <id>arq-jbossas-remote</id>
          <dependencies>
-            <dependency>
-               <groupId>org.jboss.as</groupId>
-               <artifactId>jboss-as-arquillian-container-remote</artifactId>
-               <version>7.0.2.Final</version>
-               <scope>test</scope>
-            </dependency>
+             <dependency>
+                 <groupId>org.wildfly</groupId>
+                 <artifactId>wildfly-arquillian-container-remote</artifactId>
+                 <version>${version.arquillian.container}</version>
+                 <scope>test</scope>
+             </dependency>
          </dependencies>
       </profile>
 
