--- a/auto-bazaar-web/pom.xml
+++ b/auto-bazaar-web/pom.xml
@@ -24,41 +24,62 @@
          <scope>provided</scope>
       </dependency>
 
-      <!-- Import the JAX-RS API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.jboss.spec.javax.ws.rs</groupId>
-         <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.hibernate.javax.persistence</groupId>
+           <artifactId>hibernate-jpa-2.1-api</artifactId>
+           <scope>provided</scope>
+       </dependency>
 
-      <!-- Import the CDI API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
+       <!-- Import the CDI API, we use provided scope as the API is included in JBoss WildFly -->
+       <dependency>
+           <groupId>javax.enterprise</groupId>
+           <artifactId>cdi-api</artifactId>
+           <scope>provided</scope>
+       </dependency>
 
-      <!-- Import the JPA API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
+
+       <!-- Import the Common Annotations API (JSR-250), we use provided scope
+           as the API is included in JBoss WildFly -->
+       <dependency>
+           <groupId>org.jboss.spec.javax.annotation</groupId>
+           <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+           <scope>provided</scope>
+       </dependency>
+
+       <!-- Import the JSF API, we use provided scope as the API is included in JBoss WildFly -->
+       <dependency>
+           <groupId>org.jboss.spec.javax.faces</groupId>
+           <artifactId>jboss-jsf-api_2.2_spec</artifactId>
+           <scope>provided</scope>
+       </dependency>
+
+       <!-- Import the EJB API, we use provided scope as the API is included in
+             JBoss WildFly -->
+       <dependency>
+           <groupId>org.jboss.spec.javax.ejb</groupId>
+           <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+           <scope>provided</scope>
+       </dependency>
+
+       <dependency>
+           <groupId>javax</groupId>
+           <artifactId>javaee-web-api</artifactId>
+           <version>7.0</version>
+       </dependency>
 
    </dependencies>
 
    <build>
+       <!-- Set the name of the war, used as the context root when the app
+            is deployed -->
+       <finalName>${project.artifactId}</finalName>
       <plugins>
          <plugin>
             <artifactId>maven-war-plugin</artifactId>
-            <version>2.1.1</version>
+            <version>${version.war.plugin}</version>
             <configuration>
-               <!-- Java EE 6 doesn't require web.xml, Maven needs to catch 
-                  up! -->
-               <failOnMissingWebXml>false</failOnMissingWebXml>
+                <!-- Java EE 7 doesn't require web.xml, Maven needs to catch up! -->
+                <failOnMissingWebXml>false</failOnMissingWebXml>
             </configuration>
          </plugin>
       </plugins>
