--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,19 @@
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+       <version.wildfly.maven.plugin>1.0.1.Final</version.wildfly.maven.plugin>
+       <version.wildfly>8.0.0.Final</version.wildfly>
+       <version.arquillian.container>8.0.0.Final</version.arquillian.container>
+
+       <!-- other plugin versions -->
+       <version.compiler.plugin>3.1</version.compiler.plugin>
+       <version.ear.plugin>2.6</version.ear.plugin>
+       <version.ejb.plugin>2.3</version.ejb.plugin>
+       <version.war.plugin>2.1.1</version.war.plugin>
+
+       <!-- maven-compiler-plugin -->
+       <maven.compiler.target>1.7</maven.compiler.target>
+       <maven.compiler.source>1.7</maven.compiler.source>
    </properties>
 
    <dependencyManagement>
@@ -30,7 +43,7 @@
             <type>ejb</type>
          </dependency>
 
-         <!-- Define the version of the WAR so that we don't need to repeat 
+         <!-- Define the version of the WAR so that we don't need to repeat
             ourselves in every module -->
          <dependency>
             <groupId>cz.muni.fi.pv243</groupId>
@@ -40,24 +53,20 @@
             <scope>compile</scope>
          </dependency>
 
-         <!-- Define the version of JBoss' Java EE 6 APIs we want to import. 
-            Any dependencies from org.jboss.spec will have their version defined by this 
-            BOM -->
-         <!-- JBoss distributes a complete set of Java EE 6 APIs including 
-            a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or 
-            a collection) of artifacts. We use this here so that we always get the correct 
-            versions of artifacts. Here we use the jboss-javaee-web-6.0 stack (you can 
-            read this as the JBoss stack of the Java EE Web Profile 6 APIs), and we use 
-            version 2.0.0.Beta1 which is the latest release of the stack. You can actually 
-            use this stack with any version of JBoss AS that implements Java EE 6, not 
-            just JBoss AS 7! -->
-         <dependency>
-            <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-web-6.0</artifactId>
-            <version>2.0.0.Final</version>
-            <type>pom</type>
-            <scope>import</scope>
-         </dependency>
+          <dependency>
+              <groupId>org.wildfly.bom</groupId>
+              <artifactId>jboss-javaee-7.0-with-tools</artifactId>
+              <version>${version.wildfly}</version>
+              <type>pom</type>
+              <scope>import</scope>
+          </dependency>
+          <dependency>
+              <groupId>org.wildfly.bom</groupId>
+              <artifactId>jboss-javaee-7.0-with-hibernate</artifactId>
+              <version>${version.wildfly}</version>
+              <type>pom</type>
+              <scope>import</scope>
+          </dependency>
 
          <!-- JSR-303 (Bean Validation) Implementation -->
          <!-- Provides portable constraints such as @Email -->
@@ -94,26 +103,25 @@
                annotation processors -->
             <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
-               <version>2.3.2</version>
+               <version>${version.compiler.plugin}</version>
                <configuration>
-                  <source>1.6</source>
-                  <target>1.6</target>
+                  <source>${maven.compiler.source}</source>
+                  <target>${maven.compiler.target}</target>
                </configuration>
             </plugin>
-            <!-- The JBoss AS plugin deploys your ear to a local JBoss AS 
-               container -->
-            <!-- Due to Maven's lack of intelligence with EARs we need to 
-               configure the jboss-as maven plugin to skip deployment for all modules. We 
-               then enable it specifically in the ear module. -->
-            <plugin>
-               <groupId>org.jboss.as.plugins</groupId>
-               <artifactId>jboss-as-maven-plugin</artifactId>
-               <version>7.0.2.Final</version>
-               <inherited>true</inherited>
-               <configuration>
-                  <skip>true</skip>
-               </configuration>
-            </plugin>
+             <!-- The WildFly plugin deploys your ear to a local JBoss
+                     AS container -->
+             <!-- Due to Maven's lack of intelligence with EARs we need
+                 to configure the wildfly maven plugin to skip deployment for all modules.
+                 We then enable it specifically in the ear module. -->
+             <plugin>
+                 <groupId>org.wildfly.plugins</groupId>
+                 <artifactId>wildfly-maven-plugin</artifactId>
+                 <version>${version.wildfly.maven.plugin}</version>
+                 <configuration>
+                     <skip>true</skip>
+                 </configuration>
+             </plugin>
          </plugins>
       </pluginManagement>
    </build>
