--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 *.class
 
+# Directories #
+/build/
+/bin/
+target/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -10,3 +21,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+######################
+## Eclipse
+#######################
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/
+
