--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
        <version.wildfly.maven.plugin>1.0.1.Final</version.wildfly.maven.plugin>
        <version.wildfly>8.0.0.Final</version.wildfly>
        <version.arquillian.container>8.0.0.Final</version.arquillian.container>
+       <version.joda.joda-time>1.3</version.joda.joda-time>
 
        <!-- other plugin versions -->
        <version.compiler.plugin>3.1</version.compiler.plugin>
@@ -34,8 +35,6 @@
    <dependencyManagement>
       <dependencies>
 
-         <!-- Define the version of the EJB jar so that we don't need to 
-            repeat ourselves in every module -->
          <dependency>
             <groupId>cz.muni.fi.pv243</groupId>
             <artifactId>auto-bazaar-ejb</artifactId>
@@ -43,8 +42,6 @@
             <type>ejb</type>
          </dependency>
 
-         <!-- Define the version of the WAR so that we don't need to repeat
-            ourselves in every module -->
          <dependency>
             <groupId>cz.muni.fi.pv243</groupId>
             <artifactId>auto-bazaar-web</artifactId>
@@ -92,7 +89,6 @@
             <type>jar</type>
             <scope>test</scope>
          </dependency>
-
       </dependencies>
    </dependencyManagement>
 
