--- a/auto-bazaar-ear/pom.xml
+++ b/auto-bazaar-ear/pom.xml
@@ -30,7 +30,7 @@
    </dependencies>
 
    <build>
-      <finalName>auto-bazaar</finalName>
+      <finalName>${project.artifactId}</finalName>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
