--- a/auto-bazaar-ejb/pom.xml
+++ b/auto-bazaar-ejb/pom.xml
@@ -15,6 +15,25 @@
    <name>auto-bazaar EJB module</name>
 
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-bom</artifactId>
+                <version>2.0.0-alpha-1</version>
+                <scope>test</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>1.0.0.Final</version>
+                <scope>test</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
    <dependencies>
        <dependency>
            <groupId>javax.enterprise</groupId>
@@ -93,6 +112,17 @@
       </dependency>
 
        <dependency>
+           <groupId>org.jboss.shrinkwrap.resolver</groupId>
+           <artifactId>shrinkwrap-resolver-api-maven</artifactId>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.jboss.shrinkwrap.resolver</groupId>
+           <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+           <scope>test</scope>
+       </dependency>
+
+       <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
@@ -104,13 +134,15 @@
            <scope>test</scope>
        </dependency>
 
+
    </dependencies>
 
    <build>
+      <finalName>${project.artifactId}</finalName>
       <plugins>
          <plugin>
             <artifactId>maven-ejb-plugin</artifactId>
-            <version>2.3</version>
+            <version>${version.ejb.plugin}</version>
             <configuration>
                <!-- Tell Maven we are using EJB 3.1 -->
                <ejbVersion>3.1</ejbVersion>
@@ -192,6 +224,7 @@
                  <scope>test</scope>
              </dependency>
          </dependencies>
+
       </profile>
 
       <profile>
