--- a/auto-bazaar-ejb/pom.xml
+++ b/auto-bazaar-ejb/pom.xml
@@ -78,7 +78,7 @@
        </dependency>
 
        <!--date dependencies-->
-       <dependency>
+       <!--dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time-hibernate</artifactId>
            <version>1.3</version>
@@ -92,7 +92,7 @@
                    <groupId>joda-time</groupId>
                </exclusion>
            </exclusions>
-       </dependency>
+       </dependency-->
        <dependency>
            <artifactId>joda-time</artifactId>
            <groupId>joda-time</groupId>
@@ -104,6 +104,11 @@
                </exclusion>
            </exclusions>
        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.2.0.GA</version>
+        </dependency>       
 
        <!--test dependencies-->
       <dependency>
